<resources>
    <string name="app_name">The Shining: Hedge Maze</string>
    <string name="DFS">DFS</string>
    <string name="Prim">Prim</string>
    <string name="Boruvka">Boruvka</string>
    <string name="Difficulty">Select Difficulty:</string>
    <string name="Room">Include Rooms?</string>
    <string name="Algorithm">Generation Algorithm:</string>
    <string name="Explore">Explore</string>
    <string name="Revisit">Revisit</string>
    <string name="Manual">Manual</string>
    <string name="WallFollower">WallFollower</string>
    <string name="Wizard">Wizard</string>
    <string name="Premium">Premium</string>
    <string name="Mediocre">Mediocre</string>
    <string name="Soso">So-so</string>
    <string name="Shaky">Shaky</string>
    <string name="RobotQuality">Robot Quality:</string>
    <string name="Driver">Driver:</string>
    <string name="GeneratingMaze">Generating Maze:</string>
    <string name="WaitingThread">Waiting for maze to be generated</string>
    <string name="WaitingSelection">Please select a driver and/or robot to continue to the maze</string>
    <string name="Map">Show Map</string>
    <string name="Solution">Show Solution</string>
    <string name="Walls">Show Walls</string>
    <string name="ShortCut">ShortCut</string>
    <string name="Winning">Go2Winning</string>
    <string name="Losing">Go2Losing</string>
    <string name="Energy">Energy:</string>
    <string name="Speed">Speed:</string>
    <string name="Slow">Slow</string>
    <string name="Medium">Medium</string>
    <string name="Fast">Fast</string>
    <string name="Front">Front</string>
    <string name="Left">Left</string>
    <string name="Right">Right</string>
    <string name="Back">Back</string>
    <string name="Lost">You Lost!</string>
    <string name="Won">You Won!</string>
    <string name="odometer">Total Path Length:</string>
    <string name="shortest">Shortest Path Length:</string>
    <string name="Consumption">Energy Consumption:</string>
    <string name="playAgain">Play Again?</string>
    <string name="Welcome">Welcome to the Overlook hotel!</string>
</resources>