<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".gui.LosingActivity"
    android:background="@color/black"
    >


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/frozenjack"
        android:scaleType="fitXY"/>

    <TextView
        android:id="@+id/textLost"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginTop="60dp"
        android:fontFamily="@font/seaweed_script"
        android:text="@string/Lost"
        android:shadowColor="@color/black"
        android:shadowRadius="15"
        android:textAlignment="center"
        android:textColor="@color/red"
        android:textSize="120dp" />

    <TextView
        android:id="@+id/textViewOdometer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="340dp"
        android:layout_centerHorizontal="true"
        android:text="@string/odometer"
        android:shadowColor="@color/black"
        android:shadowRadius="15"
        android:textSize="30sp"
        android:fontFamily="@font/seaweed_script"
        android:textColor="@color/gold"/>

    <TextView
        android:id="@+id/textViewShortest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_below="@id/textViewOdometer"
        android:layout_centerHorizontal="true"
        android:text="@string/shortest"
        android:shadowColor="@color/black"
        android:shadowRadius="15"
        android:textSize="30sp"
        android:fontFamily="@font/seaweed_script"
        android:textColor="@color/gold"/>

    <TextView
        android:id="@+id/textViewConsumption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_below="@id/textViewShortest"
        android:layout_centerHorizontal="true"
        android:text="@string/Consumption"
        android:textSize="30sp"
        android:shadowColor="@color/black"
        android:shadowRadius="15"
        android:fontFamily="@font/seaweed_script"
        android:textColor="@color/gold"/>

    <Button
        android:id="@+id/buttonPlayAgain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textViewConsumption"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/seaweed_script"
        android:shadowColor="@color/black"
        android:shadowRadius="25"
        android:textColor="@color/gold"
        android:text="@string/playAgain"
        android:textSize="36sp"/>
</RelativeLayout>