<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PlayAnimationActivity">

    <ProgressBar
        android:id="@+id/progressBarBattery"
        style="@android:style/Widget.ProgressBar.Horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="400dp"
        android:minHeight="25dp"
        android:layout_marginTop="15dp"
        android:layout_centerHorizontal="true"
        android:progress="0"
        android:progressBackgroundTint="@color/teal_200"
        android:progressTint="@color/black"
        />

    <Button
        android:id="@+id/buttonGo2Losing"
        android:layout_width="198dp"
        android:layout_height="394dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="55dp"
        android:backgroundTint="@color/teal_200"
        android:text="@string/Losing" />

    <Button
        android:id="@+id/buttonGo2Winning"
        android:layout_width="198dp"
        android:layout_height="394dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="55dp"
        android:backgroundTint="@color/teal_200"
        android:text="@string/Winning" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:text="@string/Energy"
        android:textColor="@color/black"
        android:textSize="20sp"/>

</RelativeLayout>